--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
     <title>TailWind</title>
 </head>
 <body>
-    <h1 class="text-red-600">Testovací test</h1>
+    <header class="bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
+        <nav class="">
+            <div class=""></div>
+            <div class=""></div>
+            <div class=""></div>
+        </nav>
+
+        <div class=""></div>
+        <div class=""></div>
+        <div class=""></div>
+    </header>
 </body>
 </html>
