--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,18 @@
 <body>
     <header class="bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
         <nav class="">
-            <div class=""></div>
-            <div class=""></div>
+            <div class="">
+                <img class="w-40 ml-8" src="/public/img/logo-hp.png" alt="logo">
+            </div>
+
+            <div class="hidden">
+                <ul class="">
+                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Philosopher Stone</li>
+                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Chamber of Secrets</li>
+                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Prisoner od Azkaban</li>
+                </ul>
+            </div>
+
             <div class=""></div>
         </nav>
 
