--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,26 @@
 </head>
 <body>
     <header class="bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
-        <nav class="">
+        <nav class="flex justify-between items-center bg-black h-24">
             <div class="">
                 <img class="w-40 ml-8" src="/public/img/logo-hp.png" alt="logo">
             </div>
 
-            <div class="hidden">
-                <ul class="">
+            <div class="hidden lg:inline">
+                <ul class="flex text-[22px] ">
                     <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Philosopher Stone</li>
                     <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Chamber of Secrets</li>
                     <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Prisoner od Azkaban</li>
                 </ul>
             </div>
 
-            <div class=""></div>
+            <div class="">
+                <ul class="flex space-x-3 mr-2 font-bold text-[22px] text-white">
+                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">T-shirts</li>
+                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Mugs</li>
+                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Books</li>
+                </ul>
+            </div>
         </nav>
 
         <div class=""></div>
