--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>TailWind</title>
 </head>
 <body>
-    <header class="bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
+    <header class="relative bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
         <nav class="flex justify-between items-center bg-black h-24">
             <div class="">
                 <img class="w-40 ml-8" src="/public/img/logo-hp.png" alt="logo">
@@ -31,8 +31,16 @@
             </div>
         </nav>
 
-        <div class=""></div>
-        <div class=""></div>
+        <div class="mt-32 text-center text-white">
+            <h1 class="text-[40px]">Philosopher Stone</h1>
+            <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="absolute bottom-20 flex flex-col items-center w-[100%] lg:flex-row lg:justify-center lg:space-x-4 ">
+            <button class="uppercase bg-blue-600 w-80 text-white rounded-full h-10">Objednať</button>
+            <button class="mt-2 uppercase bg-blue-950 rounded-full w-80 h-10 text-white">Viac informácií</button>
+        </div>
+
         <div class=""></div>
     </header>
 </body>
