--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>TailWind</title>
 </head>
 <body>
+
+    <!--Menu Kameň mudrcov-->
     <header class="relative bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
         <nav class="flex justify-between items-center bg-black h-24">
             <div class="">
@@ -41,7 +43,34 @@
             <button class="mt-2 uppercase bg-blue-950 rounded-full w-80 h-10 text-white">Viac informácií</button>
         </div>
 
-        <div class=""></div>
+        <div class="absolute bottom-5 w-[100%] ">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+             class="w-10 h-10 text-white mx-auto animate-bounce">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+          </svg>
+        </div>
     </header>
+
+<!--Menu Tajomná komnata-->
+<section class="relative bg-[url(/public/img/bg-2.jpg)] h-screen bg-cover bg-center">
+
+    <div class="mt-0 text-center text-white">
+        <h1 class="text-[40px] pt-32">Chamber of Secrets</h1>
+        <p class="text-xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, officia?</p>
+    </div>
+
+    <div class="absolute bottom-20 flex flex-col items-center w-[100%] lg:flex-row lg:justify-center lg:space-x-4 ">
+        <button class="uppercase bg-green-600 w-80 text-white rounded-full h-10">Objednať</button>
+        <button class="mt-2 uppercase bg-green-950 rounded-full w-80 h-10 text-white">Viac informácií</button>
+    </div>
+
+    <div class="absolute bottom-5 w-[100%] ">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+         class="w-10 h-10 text-white mx-auto animate-bounce">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+      </svg>
+    </div>
+</section>
+
 </body>
 </html>
