--- a/src/index.html
+++ b/src/index.html
@@ -72,5 +72,21 @@
     </div>
 </section>
 
+<!--Menu Väzeň z Azkabanu-->
+<section class="relative bg-[url(/public/img/bg-3.jpg)] h-screen bg-cover bg-center">
+
+    <div class="mt-0 text-center text-white">
+        <h1 class="text-[40px] pt-32">Prisoner of Azkaban</h1>
+        <p class="text-xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+
+    <div class="absolute bottom-20 flex flex-col items-center w-[100%] lg:flex-row lg:justify-center lg:space-x-4 ">
+        <button class="uppercase bg-slate-500 w-80 text-white rounded-full h-10">Objednať</button>
+        <button class="mt-2 uppercase bg-black rounded-full w-80 h-10 text-white">Viac informácií</button>
+    </div>
+
+
+</section>
+
 </body>
 </html>
