--- a/src/index.html
+++ b/src/index.html
@@ -9,47 +9,47 @@
 </head>
 <body>
 
-    <!--Menu Kameň mudrcov-->
-    <header class="relative bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
-        <nav class="flex justify-between items-center bg-black h-24">
-            <div class="">
-                <img class="w-40 ml-8" src="/public/img/logo-hp.png" alt="logo">
-            </div>
-
-            <div class="hidden lg:inline">
-                <ul class="flex text-[22px] ">
-                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Philosopher Stone</li>
-                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Chamber of Secrets</li>
-                    <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Prisoner od Azkaban</li>
-                </ul>
-            </div>
-
-            <div class="">
-                <ul class="flex space-x-3 mr-2 font-bold text-[22px] text-white">
-                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">T-shirts</li>
-                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Mugs</li>
-                    <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Books</li>
-                </ul>
-            </div>
-        </nav>
-
-        <div class="mt-32 text-center text-white">
-            <h1 class="text-[40px]">Philosopher Stone</h1>
-            <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+<!--Menu Kameň mudrcov-->
+<header class="relative bg-[url(/public/img/bg-1.avif)] h-screen bg-cover bg-center">
+    <nav class="z-50 fixed top-0 w-full  flex justify-between items-center bg-black h-24">
+        <div class="">
+            <img class="w-40 ml-8" src="/public/img/logo-hp.png" alt="logo">
         </div>
 
-        <div class="absolute bottom-20 flex flex-col items-center w-[100%] lg:flex-row lg:justify-center lg:space-x-4 ">
-            <button class="uppercase bg-blue-600 w-80 text-white rounded-full h-10">Objednať</button>
-            <button class="mt-2 uppercase bg-blue-950 rounded-full w-80 h-10 text-white">Viac informácií</button>
+        <div class="hidden lg:inline">
+            <ul class="flex text-[22px] ">
+                <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Philosopher Stone</li>
+                <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Chamber of Secrets</li>
+                <li class="py-1 px-2 text-white hover:bg-slate-400 hover:rounded-xl cursor-pointer">Prisoner od Azkaban</li>
+            </ul>
         </div>
 
-        <div class="absolute bottom-5 w-[100%] ">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-             class="w-10 h-10 text-white mx-auto animate-bounce">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
-          </svg>
+        <div class="">
+            <ul class="flex space-x-3 mr-2 font-bold text-[22px] text-white">
+                <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">T-shirts</li>
+                <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Mugs</li>
+                <li class="cursor-pointer hover:rounded-xl hover:bg-slate-400 py-1 px-2">Books</li>
+            </ul>
         </div>
-    </header>
+    </nav>
+
+    <div class="pt-32 text-center text-white">
+        <h1 class="text-[40px]">Philosopher Stone</h1>
+        <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+
+    <div class="absolute bottom-20 flex flex-col items-center w-[100%] lg:flex-row lg:justify-center lg:space-x-4 ">
+        <button class="uppercase bg-blue-600 w-80 text-white rounded-full h-10">Objednať</button>
+        <button class="mt-2 uppercase bg-blue-950 rounded-full w-80 h-10 text-white">Viac informácií</button>
+    </div>
+
+    <div class="absolute bottom-5 w-[100%] ">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-10 h-10 text-white mx-auto animate-bounce">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+        </svg>
+    </div>
+</header>
 
 <!--Menu Tajomná komnata-->
 <section class="relative bg-[url(/public/img/bg-2.jpg)] h-screen bg-cover bg-center">
@@ -85,8 +85,13 @@
         <button class="mt-2 uppercase bg-black rounded-full w-80 h-10 text-white">Viac informácií</button>
     </div>
 
-
 </section>
+
+
+
+
+
+
 
 </body>
 </html>
